Added Frontend(Angular), Lambok, Vitest and updated readme