@@ -139,6 +139,16 @@
             <version>2.5.0</version>
         </dependency>
 
+<<<<<<< HEAD
+=======
+        <!-- ================= LOMBOK ================= -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+>>>>>>> c719d7d (Added Frontend(Angular), Lambok, Vitest and updated readme)
         <!-- ================= TEST ================= -->
 
         <!-- JUnit + Spring Boot Test -->
@@ -196,7 +206,73 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+<<<<<<< HEAD
         </plugins>
     </build>
 
 </project>
+=======
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.14</version>
+                <configuration>
+                    <excludes>
+                        <exclude>com/capg/jobportal/JpmsJobServiceApplication.class</exclude>
+                        <exclude>com/capg/jobportal/security/SecurityConfig.class</exclude>
+                        <exclude>com/capg/jobportal/repository/**</exclude>
+                        
+                        <exclude>com/capg/jobportal/config/**</exclude>
+                        <exclude>com/capg/jobportal/client/**</exclude>
+                        
+                        
+                        
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals><goal>prepare-agent</goal></goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals><goal>report</goal></goals>
+                    </execution>
+                    <execution>
+                        <id>check</id>
+                        <goals><goal>check</goal></goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>1.00</minimum>
+                                        </limit>
+                                        <limit>
+                                            <counter>BRANCH</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>1.00</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+</project>
+>>>>>>> c719d7d (Added Frontend(Angular), Lambok, Vitest and updated readme)
